# TakeAwayGame

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  computer_player.cpp  computer_player.h  game.cpp  game.h  main.cpp  options.cpp  options.h
